Fix last insert id workaround for MySQL 5.7 and 8.0 client versions

MySQL 5.7 below 5.7.18 and MySQL 8.0.0 are affected by Bug #78778.
mysql_insert_id() is reset to 0 after performing SELECT operation.

As a workaround prior to issuing mysql query we store value of last insert
id. If query returns result set then we know that it was SELECT operation
and so after that we restore previous value of last insert id.

MySQL 5.7, MySQL 8.0, MySQL Connector/C 6.1.5 and higher are affected by
Bug #89139. mysql_insert_id() is reset to 0 after calling mysql_ping() C
function.

As a workaround prior to calling mysql_ping() function we store value of
last insert id. After function finish we restore previous value of last
insert id.

DBD::MariaDB had already second workaround but with wrong version check.
This commit therefore fix version check for second workaround and declare
helper macros for determining if workaround is needed.

Applying both workaround fixes $dbh->last_insert_id() method and now can be
called also when compiled with those affected MySQL client versions, even
after $dbh->ping() method or performing SELECT operation. So skip blocks
for last insert id tests are now removed and tests are enabled for all
MySQL client versions.

Fixes: 26ff601f518c76b8900764780e867b74e20824a1
See: https://bugs.mysql.com/bug.php?id=78778
See: https://bugs.mysql.com/bug.php?id=89139