dbdimp.h
@@ -313,6 +313,25 @@ PERL_STATIC_INLINE UV SvUV_nomg(pTHX_ SV *sv)
 #endif
 
 /*
+ * MySQL 5.7 below 5.7.18 and MySQL 8.0.0 are affected by Bug #78778.
+ * mysql_insert_id() is reset to 0 after performing SELECT operation.
+ * https://bugs.mysql.com/bug.php?id=78778
+ */
+#if !defined(MARIADB_BASE_VERSION) && ((MYSQL_VERSION_ID >= 50700 && MYSQL_VERSION_ID <= 50717) || MYSQL_VERSION_ID == 80000)
+#define HAVE_BROKEN_INSERT_ID_AFTER_SELECT
+#endif
+
+/*
+ * MySQL 5.7, MySQL 8.0, MySQL Connector/C 6.1.5 and higher are affected by Bug #89139.
+ * mysql_insert_id() is reset to 0 after calling mysql_ping() C function.
+ * Once Bug #89139 is fixed we can adjust the upper bound of this check.
+ * https://bugs.mysql.com/bug.php?id=89139
+ */
+#if !defined(MARIADB_BASE_VERSION) && MYSQL_VERSION_ID >= 50700 && (MYSQL_VERSION_ID < 60100 || MYSQL_VERSION_ID >= 60105)
+#define HAVE_BROKEN_INSERT_ID_AFTER_PING
+#endif
+
+/*
  * Check which SSL settings are supported by API at compile time
  */
 
