t/31insertid.t
@@ -43,11 +43,7 @@ is $dbh->last_insert_id(undef, undef, undef, undef), 1, "insert id == last_inser
 ok $sth->execute("Patrick");
 
 $dbh->ping();
-SKIP: {
-  skip 'using libmysqlclient 5.7 or up we now have an empty dbh insertid',
-    1, if ($dbh->{mariadb_clientversion} >= 50700 && $dbh->{mariadb_clientversion} < 50718) || ($dbh->{mariadb_clientversion} >= 60105 && $dbh->{mariadb_clientversion} < 69999) || $dbh->{mariadb_clientversion} == 80000;
   is $dbh->last_insert_id(undef, undef, undef, undef), 2, "insert id == last_insert_id()";
-}
 
 ok (my $sth2= $dbh->prepare("SELECT max(id) FROM dbd_mysql_t31"));
 
@@ -60,12 +56,8 @@ ok ($max_id= $sth2->fetch());
 
 ok defined $max_id;
 
-SKIP: {
-  skip 'using libmysqlclient 5.7 below 5.7.18 we now have an empty dbh insertid',
-    1, if ($dbh->{mariadb_clientversion} >= 50700 && $dbh->{mariadb_clientversion} < 50718) || ($dbh->{mariadb_clientversion} >= 60105 && $dbh->{mariadb_clientversion} < 69999) || $dbh->{mariadb_clientversion} == 80000;
   cmp_ok $dbh->{mariadb_insertid}, '==', $max_id->[0],
     "dbh insert id $dbh->{'mariadb_insertid'} == max(id) $max_id->[0] in dbd_mysql_t31";
-}
 cmp_ok $sth->{mariadb_insertid}, '==', $max_id->[0],
   "sth insert id $sth->{'mariadb_insertid'} == max(id) $max_id->[0]  in dbd_mysql_t31";
 
